--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@
 
 :root {
     --cor-de-fundo: #1E1E1E;
-    --verde: #57f4ff;
+    --verde: #0099ff;
     --branco: #FFFFFF;
-    --botao-ativo: #3A375E;
+    --botao-ativo: #375e4e;
     --botao-inativo: rgba(58, 55, 94, 0.5);
-    --texto-fundo: rgba(58, 55, 94, 0.3);
+    --texto-fundo: rgb(0, 255, 157);
 }
 
 
