--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 :root {
     --cor-de-fundo: #1E1E1E;
-    --verde: #0099ff;
+    --verde: #000000;
     --branco: #FFFFFF;
     --botao-ativo: #375e4e;
     --botao-inativo: rgba(58, 55, 94, 0.5);
