--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 :root {
     --cor-de-fundo: #1E1E1E;
     --verde: #000000;
-    --branco: #FFFFFF;
+    --branco: #000000;
     --botao-ativo: #375e4e;
     --botao-inativo: rgba(58, 55, 94, 0.5);
     --texto-fundo: rgb(0, 255, 157);
