--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@
 
 :root {
     --cor-de-fundo: #1E1E1E;
-    --verde: #000000;
-    --branco: #000000;
+    --verde: #ffffff;
+    --branco: #ffffff;
     --botao-ativo: #375e4e;
     --botao-inativo: rgba(58, 55, 94, 0.5);
-    --texto-fundo: rgb(255, 255, 255);
+    --texto-fundo: rgb(0, 0, 0);
 }
 
 
